--- a/index.html
+++ b/index.html
@@ -8,14 +8,14 @@
 	</head>
 	<body>
 		<header>
-			<h1>The Disco Balls heard there were dudes with afros dacing off your screen watch as they walk away to go hang out with the dancing dudes</h1>
+			<h1>Groovy Disco Balls</h1>
 		</header>
 			<section id="content">
 				<canvas id="Chemotaxis" data-processing-sources="Chemotaxis.pde">
 				</canvas>
 		    </section>
 	    <footer>
-		    Footer
+		    The Disco Balls heard there were dudes with afros dacing off your screen watch as they walk away to go hang out with the dancing dudes!
 	    </footer>
 	</body>
 </html>
