--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 				</canvas>
 		    </section>
 	    <footer>
-		    The Disco Balls heard there were dudes with afros dacing off your screen watch as they walk away to go hang out with the dancing dudes!
+		    The Disco Balls heard there were dudes dacing off your screen, watch as they walk away to go hang out with the dancing dudes!
 	    </footer>
 	</body>
 </html>
